--- a/package.json
+++ b/package.json
@@ -8,6 +8,8 @@
 		"@testing-library/jest-dom": "^5.17.0",
 		"@testing-library/react": "^13.4.0",
 		"@testing-library/user-event": "^13.5.0",
+		"@types/react": "^18.3.11",
+		"@types/react-dom": "^18.3.0",
 		"axios": "^1.6.8",
 		"from": "^0.1.7",
 		"mongoose": "^8.3.4",
